# FinAI-Qwen

./: .env.example  .gitignore  LICENSE  PROJECT_DOCUMENTATION.md  README.md  chat.py  pyproject.toml  requirements.txt
config/: __init__.py  generation_config.py  model_config.py  paths.py  training_config.py
data/samples/: alpaca_sample.jsonl  chatml_sample.jsonl  openai_sample.jsonl  sharegpt_sample.jsonl
docs/: changelog.md  dataset_formats.md  deployment.md  folder_structure.md  inference_pipeline.md  project_architecture.md  roadmap.md  training_pipeline.md
notebooks/: FinAI_Qwen_Colab.ipynb
scripts/: __init__.py  benchmark.py  download_model.py  evaluate.py  merge_lora.py  train.py  verify_model.py
src/: __init__.py
src/data/: __init__.py  formats.py  loader.py
src/evaluation/: __init__.py  evaluator.py
src/inference/: __init__.py  engine.py
src/models/: __init__.py  download.py  loader.py  verify.py
src/training/: __init__.py  merge.py  trainer.py
src/utils/: __init__.py  bootstrap.py  env.py  logging_utils.py  system.py
tests/: __init__.py  conftest.py  test_config.py  test_data_loader.py  test_formats.py
